media queries corrections version mobile

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -342,7 +342,7 @@
 .item-filter{
     padding: 2%;
     padding-left:20px;
-    width:44%;
+    width:40%;
     margin-left: 0px;
     font-size:1.1rem;
     padding-right:0px;
@@ -392,7 +392,7 @@ header{
     }
 
     .activities{
-        margin: 4%;
+        margin: 6%;
         margin-top: 0px;
     }
 
